--- a/app.yaml
+++ b/app.yaml
@@ -1,9 +1,13 @@
 application: myfirstapp
 version: 1
-runtime: python
+runtime: python27
 api_version: 1
 threadsafe: true
 
 handlers:
 - url: /.*
   script: main.app
+
+libraries:
+- name: jinja2
+  version: latest
